liteOS-M/rust_kernel/kernel/test/los_memory_c.h

#define OS_LITTLE_ENDIAN 4660
#define OS_BIG_ENDIAN 17185
#define OS_BYTE_ORDER 4660
#define LOS_OK 0
#define OS_FAIL 1
#define OS_64BIT_MAX -1
#define __LIBATOMIC_N_LOCKS 16
#define OS_SYS_CLOCK 1000000
#define LOSCFG_BASE_CORE_TICK_PER_SECOND 100
#define LOSCFG_BASE_CORE_TICK_PER_SECOND_MINI 1000
#define LOSCFG_BASE_CORE_TICK_PERIOD_MS 10
#define LOSCFG_BASE_CORE_TICK_WTIMER 0
#define LOSCFG_BASE_CORE_TICK_RESPONSE_MAX 0
#define LOSCFG_PLATFORM_HWI 1
#define LOSCFG_USE_SYSTEM_DEFINED_INTERRUPT 1
#define LOSCFG_PLATFORM_HWI_LIMIT 32
#define LOSCFG_BASE_CORE_TSK_DEFAULT_PRIO 10
#define LOSCFG_BASE_CORE_TSK_LIMIT 5
#define LOSCFG_BASE_CORE_TSK_IDLE_STACK_SIZE 384
#define LOSCFG_BASE_CORE_TSK_DEFAULT_STACK_SIZE 1024
#define LOSCFG_BASE_CORE_TIMESLICE 1
#define LOSCFG_BASE_CORE_TIMESLICE_TIMEOUT 20000
#define LOSCFG_BASE_CORE_TSK_MONITOR 0
#define LOSCFG_BASE_CORE_EXC_TSK_SWITCH 0
#define LOS_TASK_PRIORITY_HIGHEST 0
#define LOS_TASK_PRIORITY_LOWEST 31
#define LOSCFG_BASE_CORE_TASKSTACK_INDEPENDENT 0
#define LOSCFG_STACK_POINT_ALIGN_SIZE 8
#define LOSCFG_BASE_IPC_SEM 1
#define LOSCFG_BASE_IPC_SEM_LIMIT 6
#define OS_SEM_COUNTING_MAX_COUNT 65535
#define LOSCFG_BASE_IPC_MUX 1
#define LOSCFG_BASE_IPC_MUX_LIMIT 6
#define LOSCFG_BASE_IPC_QUEUE 1
#define LOSCFG_BASE_IPC_QUEUE_LIMIT 6
#define LOSCFG_BASE_IPC_STATIC_QUEUE_LIMIT 3
#define LOSCFG_BASE_CORE_SWTMR 1
#define LOSCFG_BASE_CORE_SWTMR_LIMIT 5
#define LOSCFG_BASE_CORE_TSK_SWTMR_STACK_SIZE 1024
#define LOSCFG_BASE_CORE_SWTMR_ALIGN 0
#define OS_SWTMR_HANDLE_QUEUE_SIZE 5
#define LOS_COMMON_DIVISOR 10
#define LOSCFG_SYS_EXTERNAL_HEAP 0
#define LOSCFG_SYS_HEAP_SIZE 65536
#define LOSCFG_MEM_MUL_POOL 1
#define LOSCFG_MEM_FREE_BY_TASKID 0
#define LOSCFG_BASE_MEM_NODE_INTEGRITY_CHECK 0
#define LOSCFG_MEM_OMIT_LR_CNT 4
#define LOSCFG_MEM_RECORD_LR_CNT 3
#define LOSCFG_MEM_LEAKCHECK_RECORD_MAX_NUM 1024
#define LOSCFG_MEM_WATERLINE 1
#define OS_SYS_MEM_NUM 20
#define OS_SYS_NOCACHEMEM_SIZE 0
#define LOSCFG_MEM_MUL_REGIONS 0
#define LOSCFG_EXC_HARDWARE_STACK_PROTECTION 0
#define CMSIS_OS_VER 2
#define LOSCFG_KERNEL_PRINTF 1
#define LOSCFG_MPU_ENABLE 0
#define LOSCFG_TASK_MEM_USED 0
#define LOSCFG_PLATFORM_HWI_WITH_ARG 0
#define LOSCFG_ARCH_HWI_VECTOR_ALIGN 256
#define LOSCFG_KERNEL_SIGNAL 0
#define LOSCFG_KERNEL_PM 0
#define LOSCFG_KERNEL_PM_IDLE 0
#define LOSCFG_SHELL_STACK_SIZE 4096
#define OS_ERR_MAGIC_WORD 2712847352
typedef int INT32;
typedef unsigned int UINTPTR;
typedef unsigned int UINT32;
typedef char CHAR;
typedef unsigned short UINT16;
typedef unsigned char UINT8;
typedef unsigned long long UINT64;
/**
 * @ingroup los_list
 * Structure of a node in a doubly linked list.
 */
typedef struct LOS_DL_LIST {
  /**
   *< Current node's pointer to the previous node
   */
  struct LOS_DL_LIST *pstPrev;
  /**
   *< Current node's pointer to the next node
   */
  struct LOS_DL_LIST *pstNext;
} LOS_DL_LIST;
typedef unsigned int BOOL;
typedef struct LosLmkOpsNode {
  /**
   *< The priority in the LMK list, the higher priority with a smaller number.
   */
  UINT32 priority;
  /**
   *< Release the memory of tasks in the LMK list. Return LOS_OK for a successful release.
   */
  UINT32 (*freeMem)(void);
  /**
   *< Restore the tasks killed by freeMem(). Return LOS_OK for a successful restore.
   */
  UINT32 (*restoreTask)(void);
  /**
   *< LosLmkOpsNode node.
   */
  struct LOS_DL_LIST node;
} LosLmkOpsNode;
typedef unsigned int LOS_MODULE_ID;
#define LOS_MODULE_ID_LOS_MOD_SYS 0
#define LOS_MODULE_ID_LOS_MOD_MEM 1
#define LOS_MODULE_ID_LOS_MOD_TSK 2
#define LOS_MODULE_ID_LOS_MOD_SWTMR 3
#define LOS_MODULE_ID_LOS_MOD_TICK 4
#define LOS_MODULE_ID_LOS_MOD_MSG 5
#define LOS_MODULE_ID_LOS_MOD_QUE 6
#define LOS_MODULE_ID_LOS_MOD_SEM 7
#define LOS_MODULE_ID_LOS_MOD_MBOX 8
#define LOS_MODULE_ID_LOS_MOD_HWI 9
#define LOS_MODULE_ID_LOS_MOD_HWWDG 10
#define LOS_MODULE_ID_LOS_MOD_CACHE 11
#define LOS_MODULE_ID_LOS_MOD_HWTMR 12
#define LOS_MODULE_ID_LOS_MOD_MMU 13
#define LOS_MODULE_ID_LOS_MOD_LOG 14
#define LOS_MODULE_ID_LOS_MOD_ERR 15
#define LOS_MODULE_ID_LOS_MOD_EXC 16
#define LOS_MODULE_ID_LOS_MOD_CSTK 17
#define LOS_MODULE_ID_LOS_MOD_MPU 18
#define LOS_MODULE_ID_LOS_MOD_NMHWI 19
#define LOS_MODULE_ID_LOS_MOD_TRACE 20
#define LOS_MODULE_ID_LOS_MOD_IPC 24
#define LOS_MODULE_ID_LOS_MOD_TIMER 26
#define LOS_MODULE_ID_LOS_MOD_EVENT 28
#define LOS_MODULE_ID_LOS_MOD_MUX 29
#define LOS_MODULE_ID_LOS_MOD_CPUP 30
#define LOS_MODULE_ID_LOS_MOD_HOOK 31
#define LOS_MODULE_ID_LOS_MOD_PM 32
#define LOS_MODULE_ID_LOS_MOD_LMK 33
#define LOS_MODULE_ID_LOS_MOD_SHELL 49
#define LOS_MODULE_ID_LOS_MOD_SIGNAL 50
#define LOS_MODULE_ID_LOS_MOD_BUTT 51
/**
 * @ingroup los_err
 * @brief Error handling function.
 *
 * @par Description:
 * This API is used to perform different operations according to error types.
 * @attention
 * <ul>
 * <li>None</li>
 * </ul>
 *
 * @param  fileName  [IN] Log file that stores error information.
 * @param  lineNo    [IN] Line number of the erroneous line which should not be OS_ERR_MAGIC_WORD.
 * @param  errorNo   [IN] Error code.
 * @param  paraLen   [IN] Length of the input parameter pPara.
 * @param  para      [IN] User label of the error.
 *
 * @retval LOS_OK The error is successfully processed.
 * @par Dependency:
 * <ul><li>los_err.h: the header file that contains the API declaration.</li></ul>
 * @see None
 */
extern UINT32 LOS_ErrHandle(CHAR *fileName,
                            UINT32 lineNo,
                            UINT32 errorNo,
                            UINT32 paraLen,
                            void *para);
/**
 * @ingroup los_err
 * @brief Error handling function.
 *
 * @par Description:
 * This API is used to perform different operations according to error types.
 * @attention
 * <ul>
 * <li>None</li>
 * </ul>
 *
 * @param  fileName  [IN] Log file that stores error information.
 * @param  lineNo    [IN] Line number of the erroneous line which should not be OS_ERR_MAGIC_WORD.
 * @param  errorNo   [IN] Error code.
 * @param  paraLen   [IN] Length of the input parameter pPara.
 * @param  para      [IN] User label of the error.
 *
 * @retval LOS_OK The error is successfully processed.
 * @par Dependency:
 * <ul><li>los_err.h: the header file that contains the API declaration.</li></ul>
 * @see None
 */
extern UINT32 LOS_ErrHandle(CHAR *fileName,
                            UINT32 lineNo,
                            UINT32 errorNo,
                            UINT32 paraLen,
                            void *para);
/**
 * @ingroup los_err
 * @brief Error handling function.
 *
 * @par Description:
 * This API is used to perform different operations according to error types.
 * @attention
 * <ul>
 * <li>None</li>
 * </ul>
 *
 * @param  fileName  [IN] Log file that stores error information.
 * @param  lineNo    [IN] Line number of the erroneous line which should not be OS_ERR_MAGIC_WORD.
 * @param  errorNo   [IN] Error code.
 * @param  paraLen   [IN] Length of the input parameter pPara.
 * @param  para      [IN] User label of the error.
 *
 * @retval LOS_OK The error is successfully processed.
 * @par Dependency:
 * <ul><li>los_err.h: the header file that contains the API declaration.</li></ul>
 * @see None
 */
extern UINT32 LOS_ErrHandle(CHAR *fileName,
                            UINT32 lineNo,
                            UINT32 errorNo,
                            UINT32 paraLen,
                            void *para);